# lexicorp

./: CMakeLists.txt  CMakePresets.json  README.md
resources/: style.css
src/: CMakeLists.txt  main.cpp
src/db/: CMakeLists.txt  DatabaseHandler.cpp  TextRepository.cpp  WordRepository.cpp  WordTextRepository.cpp
src/db/include/db/: DatabaseHandler.h  ITextRepository.h  IWordRepository.h  IWordTextRepository.h  Text.h  TextRepository.h  Utils.h  Word.h  WordRepository.h  WordText.h  WordTextRepository.h
src/db/tests/: DatabaseHandlerTest.cpp  TextRepositoryTest.cpp  UtilsTest.cpp  WordRepositoryTest.cpp  WordTextRepositoryTest.cpp
src/pages/: CMakeLists.txt  DisplayWordsPage.cpp  HelloApplication.cpp  InsertTextPage.cpp  LanguageSelectionPage.cpp  LexiCorpMain.cpp  ViewSourcePage.cpp
src/pages/include/pages/: AppContext.h  DisplayWordsPage.h  HelloApplication.h  InsertTextPage.h  LanguageSelectionPage.h  LexiCorpMain.h  ViewSourcePage.h
src/processor/: CMakeLists.txt  TextProcessor.cpp
src/processor/include/processor/: TextProcessor.h
src/processor/tests/: TextProcessorTest.cpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: Language.h
